--- a/Chapter4.tex
+++ b/Chapter4.tex
@@ -11,15 +11,16 @@ Secondly, in the second section of the chapter, we explore the use of well-known
 
 \minitoc
 \section{Introduction}
+
+
+\section{Named Entity Recognition}
 \begin{figure}
 \centering
 \includegraphics[width=\linewidth]{images/Chapitre4/main_diag2.pdf}
 \caption{Complete description of the three contributions of this work. In this chapter we focus on the third contribution, addressing WSD/WSI and NER with the model proposed in the previous chapter.}
 \label{fig:main_diag2}
 \end{figure}
-
-\section{Named Entity Recognition}
-\subsection{Introduction}
+%\subsection{Introduction}
 \label{chap5:intro}
 In this chapter we employ the model introduced before to propose a solution to both Word Sense Disambiguation (WSD) and Induction  (WSI) tasks. The intuition of our method is not original, as we will see, but still we address concerns that are not very well studied, namely the use of heterogeneous context features to solve semantic tasks while reducing the number of parameters compared to similar approaches. Indeed, we also analyze the difference provided by different types of contexts. Our method is evaluated with two important datasets, that of Semeval 2007 and 2010.
 
@@ -379,7 +380,7 @@ We proposed a WSI/WSD method based on the contexts from the hypergraph model pre
 
 %\minitoc
 
-\subsection{Introduction}
+%\subsection{Introduction}
 Named Entity Recognition (NER) and Word Sense Induction and Disambiguation (WSI/ \allowbreak WSD) requires textual features to represent the similarities between words to discern between different words' meanings. NER goal is to automatically discover, within a text, mentions that belong to a well-defined semantic category. The classic task of NER involves detecting entities of type Location, Organization, Person and Miscellaneous. The task is of great importance for more complex NLP systems, e.g, relation extraction, opinion mining. Two common solutions to NER are one of the following: via matching patterns created manually or extracted semi-automatically; or by training a supervised machine learning algorithm with large quantities of annotated text. The latter being the currently more popular solution to this task.
 
 
