Started adding analysis NER

--- a/Chapter1.tex
+++ b/Chapter1.tex
@@ -69,8 +69,8 @@ There are several research challenges that arise from the choices taken in each 
 
 We propose three contributions, one in terms of theoretical modelization and two in terms of NLP applications. Specifically, the contributions that we propose in this work are the following:
 \begin{itemize}
-\item a hypergraph network-based model to hold and combine heterogeneous linguistic data %as well as a tool to extract said data from unstructured text.
-\item a method to combine heterogeneous representations, coming from the hypergraph model, while at the same time alleviating the sparsity problem common while dealing with text features.
+\item a hypergraph network-based model to hold heterogeneous linguistic data %as well as a tool to extract said data from unstructured text.
+\item a method to combine heterogeneous representations coming from the hypergraph model, while at the same time alleviating the sparsity problem, common while dealing with text features.
 \item a network-based algorithm to discover semantic relatedness between linked words
 
 \end{itemize}
