--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -22,7 +22,7 @@
 \noindent \Large Thesis Advisor: Sabine \textsc{Loudcher} and Julien \textsc{Ah-Pine} \\
 
 \vspace*{0.2cm}
-\noindent \Large prepared at Université de Lyon 2, \textsc{ERIC} Laboratory
+\noindent \Large prepared at Université de Lyon 2, \textsc{ERIC} Laboratory \\
 \vspace*{0.2cm}
 \noindent \large defended on  \\
 \vspace*{0.1cm}
