--- a/formatAndDefs.tex
+++ b/formatAndDefs.tex
@@ -1,4 +1,5 @@
 \usepackage{amsmath,amssymb}             % AMS Math
+\usepackage{mathtools}
  \usepackage[english]{babel}
 %\usepackage[utf8]{inputenc}
 %\usepackage{lmodern}
@@ -37,6 +38,7 @@
 % Glossary / list of abbreviations
 \usepackage{blindtext}
 \usepackage[intoc]{nomencl}
+
 \renewcommand{\nomname}{List of Abbreviations}
 
 \makenomenclature
@@ -83,7 +85,9 @@
 \usepackage{color}
 \definecolor{linkcol}{rgb}{0,0,0.4} 
 \definecolor{citecol}{rgb}{0.5,0,0} 
-
+\usepackage{tikz}
+\newcommand*\circled[1]{\tikz[baseline=(char.base)]{
+            \node[shape=circle,draw,inner sep=1pt] (char) {#1};}}
 % Change this to change the informations included in the pdf file
 
 % See hyperref documentation for information on those parameters
@@ -91,9 +95,9 @@
 \hypersetup
 {
 bookmarksopen=true,
-pdftitle="Design and Use of Anatomical Atlases for Radiotherapy",
-pdfauthor="Olivier COMMOWICK", 
-pdfsubject="Creation of atlases and atlas based segmentation", %subject of the document
+pdftitle="Hypergraphs and information fusion for term representation enrichment. Applications to word sense disambiguation and named entity recognition",
+pdfauthor="Edmundo Pavel SORIANO", 
+%pdfsubject="Creation of atlases and atlas based segmentation", %subject of the document
 %pdftoolbar=false, % toolbar hidden
 pdfmenubar=true, %menubar shown
 pdfhighlight=/O, %effect of clicking on a link
